--- a/server/views/editarproduto.ejs
+++ b/server/views/editarproduto.ejs
@@ -81,6 +81,8 @@
     </div>
 
     <div id="conteudo">
+      <h1>Produto</h1>
+      <br>
       <h2> Editar Produto</h2>
 
       <div id="custom-templates-editar">
