--- a/server/views/novoproduto.ejs
+++ b/server/views/novoproduto.ejs
@@ -83,8 +83,15 @@
         
         
       <div id="conteudo">
-      <h1>Novo Produto</h1>
-      <article>
+      <h1>Produto</h1>
+      <br>
+      <h2>Novo Produto</h2>
+      <br>
+      <h5>Dados do Produto</h5>
+
+      <hr class="divisoria" />
+      
+     
          <form id="form"  action="" method="post">
             <div class="form-row">
                <div class="form-group  md-col-2" >
@@ -154,17 +161,5 @@
         }
         );
       });
-      
-    
-
-$(document).ready(function(){
-
-   $('#btnSair').click(function(){
-    window.location.href = '/sair';
-  });
-
-});
-
-
    </script>
 </html>
