--- a/public/stylesheets/estilo_home.css
+++ b/public/stylesheets/estilo_home.css
@@ -12,17 +12,22 @@ body {
 /*Div Central*/
 #conteudo {
 	padding: 20px;
+	font-size:14px;
 }
 
-h1 {
-	color: black;
-}
+
 
 #conteudo_item_menu {
 	display: flex;
 	justify-content: center;
 	padding: 10px;
 	margin-top: 30px;
+}
+
+/*divisoria*/
+.divisoria{
+    background-color:#FD5286;
+    height: 2px;
 }
 
 .item {
