--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -5,6 +5,7 @@
 	margin: 0;
 	padding: 0;
 	font-family: 'Raleway', sans-serif;
+
 }
 
 .clear {
@@ -19,3 +20,22 @@ a {
 ul li {
 	list-style: none;
 }
+
+h1 {
+	color: #FD5286;
+	font-size:20px;
+	font-weight: bold;
+	text-transform: uppercase;
+}
+
+h2 {
+	color: #FD5286;
+	font-size:18px;
+	font-weight: bold;
+}
+
+h5 {
+font-size:16px;
+font-weight: bold;
+}
+
