--- a/server/views/novofornecedor.ejs
+++ b/server/views/novofornecedor.ejs
@@ -83,8 +83,12 @@
   </div>
 
 <div id="conteudo">
-<h1> Novo Fornecedor</h1>
-
+<h1>Fornecedor</h1>
+<br>
+<h2> Novo Fornecedor</h2>
+<br>
+<h5>Dados do Fornecedor</h5>
+<hr class="divisoria" />
 <form id="form" method="post">
 <div class="form-row">
 
@@ -114,7 +118,10 @@
   <input id="cd_ie" name="cd_ie"  class="form-control"/> 
 </div>
 </div>
-<hr>
+
+<h5>Dados de Contato</h5>
+
+<hr class="divisoria" />
 
 <div class="form-row">
 <div class="form-group md-col-2">
