--- a/server/views/produtoxml.ejs
+++ b/server/views/produtoxml.ejs
@@ -82,12 +82,20 @@
     </div>
 
     <div id="conteudo">
+        <h1>Produto</h1>
+        <br>
           <h2> Ler Nota XMl</h2>
+          <br>
+          <h5>Escolha a nota:</h5>
+          <hr class="divisoria" />
+
  <form id="form"  method="POST" enctype="multipart/form-data">        
 <input type="file" name="upXml" />
 <button type="submit">Ler</button>
 </form>
-
+<br>
+<h5>Selecione abaixo os produtos que deseja salvar:</h5>
+          <hr class="divisoria" />
 
 
 <form id="form" method="POST" action="/salvarProdutos" >
