--- a/server/views/saidaproduto.ejs
+++ b/server/views/saidaproduto.ejs
@@ -81,6 +81,8 @@
       </div>
 
       <div id="conteudo">
+          <h1>Produto</h1>
+          <br>
           <h2> Saída Produto</h2>
 
         <div id="custom-templates">
