--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -92,7 +92,7 @@
 </figure></a>
 </div>
 <div class="legenda">
-<p ><a href="">Novo Produto</a></p>
+<p ><a href="novoproduto">Novo Produto</a></p>
 </div>
 
 </div>
@@ -100,24 +100,24 @@
 
 <div class="item">
 <div class="imagem" >
-<a href=""><figure id="entradaxml">
+<a href="produtoxml"><figure id="entradaxml">
     <img src="../imagens/icon-entrada.png" alt="Entrada XML">
 </figure></a>
 </div>
 <div class="legenda">
-<p ><a href=""> Entrada de Produto</a></p> 
+<p ><a href="produtoxml"> Entrada de Produto</a></p> 
 </div>
 </div>
 
 
 <div class="item">
 <div class="imagem" > 
-<a href=""><figure id="saida" >
+<a href="saidaproduto"><figure id="saida" >
     <img src="../imagens/icon-saida.png" alt="Saída de Produto">
 </figure></a>
 </div>
 <div class="legenda">
-<p > <a href=""> Saída de Produto</p> </a>
+<p > <a href="saidaproduto"> Saída de Produto</p> </a>
 </div>
 </div>
 
@@ -130,7 +130,7 @@
         </figure> </a>
     </div>
     <div class="legenda">
-        <p class="legenda"><a href=""> Novo Fornecedor</a></p> 
+        <p class="legenda"><a href="novofornecedor"> Novo Fornecedor</a></p> 
    </div>
  </div>
 
