Criação pagina para lista fornecedores

--- a/public/stylesheets/tabela.css
+++ b/public/stylesheets/tabela.css
@@ -41,7 +41,11 @@ td[scope=row] {
 	background-color: #ced4da;
 	color: #fff;
 }
+td a{color:#000;
+	 cursor: pointer;
+	  text-transform: underline;}
 
 #dt_entrada {
 	width: inherit;
 }
+
