--- a/server/views/saidaproduto.ejs
+++ b/server/views/saidaproduto.ejs
@@ -5,6 +5,8 @@
       <meta charset="utf-8">
       <title>Saída Produto</title>
       <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+      <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js" type="text/javascript"></script>
       <link href="/stylesheets/reset.css" rel="stylesheet" type="text/css">
       <link href="/stylesheets/forms.css" rel="stylesheet" type="text/css">
       <link href="/stylesheets/estilo_home.css" rel="stylesheet" type="text/css">
@@ -129,6 +131,14 @@
                         </div>
           
                     </div>
+                    <% if (msg.length > 0){ %>
+                      <div class="alert alert-sucess alert-dismissible" id="msg">
+                        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                          <%= msg %>
+                      </div>
+                    <% } %>   
+                    
+            
           </body>
          
           </html>
