--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -37,7 +37,7 @@
               <li><a href="novofornecedor" class="lnkSubItem subitem" > Novo Fornecedor</a> </li>
               <li><a href="#" class="lnkSubItem subitem" > Editar Fornecedor</a> </li>
               <li><a href="#" class="lnkSubItem subitem" > Pesquisar Fornecedor</a> </li>
-              <li><a href="#" class="lnkSubItem subitem" > Lista de Fornecedores </a> </li>
+              <li><a href="listafornecedores" class="lnkSubItem subitem" > Lista de Fornecedores </a> </li>
             </ul>
           </li>
     
